# nfx-meta

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: nfx-meta-config.cmake.in  nfxResourceFunctions.cmake.in
